# google_trend_bot

./: .dockerignore  .env.example  Dockerfile  Google_trand_slack_bot.ipynb  Google_trand_slack_bot.py  README.md  docker-compose.yml  docker-compose.yml:Zone.Identifier  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: dev-docker-cicd.yml  docker-image.yml  test-CICD.yml
myapp/: main.py  monitor.py
myapp/bot_/: GoogleTrendsRSSBot.py
myapp/comm/: fluented_logger.py  prometheus_metric.py  slack_sender.py  tool_util.py
myapp/comm_/: prometheus_metric.py  rss_parser.py
myapp/src/: main.py  monitor.py
myapp/src/bot/: GoogleTrendsRSSBot.py  GoogleTrendsScraper.py
myapp/src/caawl_scripts/: google_trends_crawl.py
myapp/src/clients/: playwright_submit.py
myapp/src/crawl_scripts/: google_trends_crawl.py
myapp/tests/: conftest.py  test_bot.py  test_flask_app.py  test_health.py  test_metrics.py  test_scraper.py
script/: install.sh
src/: config.py  main.py
src/bot/: rss_bot.py  scraper.py
src/clients/: playwright_submit.py
src/common/: api_contracts.py  metrics.py  rss_parser.py  scrape_contracts.py  tool_util.py
src/crawl_scripts/: google_trends_crawl.py
tests/: conftest.py  test_bot.py  test_config.py  test_flask_app.py  test_google_trends_crawl.py  test_metrics.py  test_playwright_submit.py  test_rss_parser.py  test_scraper.py
